# LispShip

./: CMakeLists.txt  test.lisp  test.ls
headers/: builtins.h  context.h  eval.h  gc.h  lexer.h  list.h  map.h  node.h  parser.h  string.h
src/: builtins.c  context.c  eval.c  gc.c  lexer.c  lexer.h  list.c  main.c  map.c  node.c  node.h  parser.c  parser.h  string.c  string.h
